<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_general">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pause_trip"
            android:summary="@string/trip_active_desc"
            android:title="@string/trip_active"/>
        <ListPreference
            android:defaultValue="0.5"
            android:entries="@array/radius_preference_entries"
            android:entryValues="@array/radius_preference_values"
            android:key="search_radius"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/radius_preference_name" />
        <MultiSelectListPreference
            android:defaultValue="@array/attraction_types_values"
            android:entries="@array/attraction_types_entries"
            android:entryValues="@array/attraction_types_values"
            android:key="attraction_types"
            android:title="@string/attraction_types" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_display">
        <ListPreference
            android:defaultValue="0.5"
            android:entries="@array/radius_preference_entries"
            android:entryValues="@array/radius_preference_values"
            android:key="zoom_radius"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/zoom_radius" />
    </PreferenceCategory>



</PreferenceScreen>
